src/components/Aside/Aside.module.scss
@use "sass:math";
@use "sass:color";
@use "../../styles/conf";
@use "../../styles/conf/fibonacci";

.aside {
	display: flex;
	flex-direction: column;
	row-gap: 1rem;

	@media (min-width: conf.$s) {
		width: calc(fibonacci.$asymp-xxl-percentage - 1rem);
	}

	&__figure {
		margin: 0;
		display: flex;
		flex-direction: column;
		row-gap: 0.75rem;
	}

	&__image {
		border-radius: 0.5rem;
		height: auto;
		max-width: 100%;

		@at-root :root:not([dir="rtl"]) & {
			transform: scale(-1, 1); // Flip X
		}
	}

	&__figcaption {
		display: flex;
		align-items: center;
		font-weight: 700;
		font-size: 1.5rem;

		&-icon {
			margin-inline-end: 0.25em;
		}
	}


}

.occupation {
	font-weight: 500;
	margin: 0;
	display: flex;

	@media (max-width: #{conf.$s - 1}) {
		flex-wrap: wrap;
		align-items: center;
		column-gap: 0.25em;
	}

	@media (min-width: conf.$s) {
		flex-direction: column;
	}

	&__level {
		font-size: 0.75em;
		font-weight: 400;
	}

	// &__abbr {
	// 	@media print {
	// 		text-decoration: none;
	// 	}
	// }
}

.stack {
	display: flex;
	flex-direction: column;
	row-gap: 0.5rem;
	margin: 0;

	&__title {
		display: flex;
		align-items: center;
		margin: 0;
	}

	&__icon {
		margin-inline-end: 0.25em;
	}

	&__list {
		display: flex;
		flex-wrap: wrap;
		list-style: none;
		margin: 0;
		padding: 0;
		gap: 0.5rem 0.5rem;
	}

	&__item {
		$-item: &;
		font-size: math.div(14, 16) + 0em;
		padding: 0.25em 0.5em;
		border-radius: 0.25em;
		background: silver;
		font-weight: 800;
		color: #fff;
		text-shadow: 0 math.div(1, 16) + 0em math.div(1, 16) + 0em rgba(0, 0, 0, fibonacci.$asymp-xl);

		@media print {
			padding: 0;
		}

		&--html {
			$-bgc: color.mix(#e44d27, #f1672b);
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--css {
			$-bgc: color.mix(#1073ba, #24abdd);
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--javascript_es5-11_ {
			$-bgc: #f5dc3d;
			background-color: desaturate($-bgc, 0%);
			// background-color: color.mix(#e4a125, #f0be24);
			// background-color: #f5dc3d;
			// color: #2c2e2c;

			@media print {
				color: $-bgc;
			}
		}

		&--typescript {
			$-bgc: #2e79c8;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--react {
			$-bgc: #61dafb;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--redux {
			$-bgc: #764abc;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--next_js {
			$-bgc: #171717;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--emails {
			$-bgc: #eb4132;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--sass {
			$-bgc: #d0659a;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--bootstrap {
			$-bgc: #7531fb;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--bem {
			$-bgc: color.mix(#052433, #2ec6f1);
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--pug {
			$-bgc: #a86454;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--jest {
			$-bgc: color.mix(#3b3738, #c53d16);
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--enzyme {
			$-bgc: #ff5a60;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--svg {
			$-bgc: #ff9900;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--canvas {
			$-bgc: color.mix(#9bdd11, #c2f850);
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--vue {
			// $-bgc: color.mix(#31475e, #3fba84);
			$-bgc: #3fba84;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--jquery {
			$-bgc: color.mix(#1d2e3b, #23ace2);
			// $-bgc: #1d2e3b;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--rest {
			// $-bgc: #002c52;
			$-bgc: #008080;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--websocket {
			$-bgc: color.mix(#e44b24, #f16427);
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--parcel {
			$-bgc: #e6b37c;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--gulp {
			$-bgc: #dc4546;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--grunt {
			$-bgc: #fba91a;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--webpack {
			$-bgc: color.mix(#1c78c1, #8ed6fa);
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--zurb-emails {
			$-bgc: #cd7791;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--liquid {
			$-bgc: color.mix(#0f83cd, #fff);
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--git {
			$-bgc: #f05032;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--w3c {
			$-bgc: #005a9c;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--a11y {
			$-bgc: #007bff;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--figma {
			$-bgc: #2ec4b6;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--zeplin {
			$-bgc: #fd7c00;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--photoshop {
			$-bgc: #001e3d;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--npm {
			$-bgc: #cb3837;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}

		&--node_js {
			$-bgc: #8cc84b;
			background-color: desaturate($-bgc, 0%);

			@media print {
				color: $-bgc;
			}
		}
	}

	&__toggle {
		font-size: fibonacci.$asymp-xxxl + 0rem;
		align-self: center;

		@media print {
			display: none;
		}
	}
}

.languages {
	display: flex;
	flex-direction: column;
	row-gap: 0.5rem;

	&__title {
		display: flex;
		align-items: center;
		flex-wrap: wrap;
		margin: 0;
	}

	&__icon {
		margin-inline-end: 0.25em;
	}

	&__item {
		display: flex;
		flex-wrap: wrap;
		align-items: center;
		white-space: pre;

		// &::before {
		// 	content: "";
		// 	display: inline-flex;
		// 	width: math.div(6, 16) + 0em;
		// 	height: math.div(6, 16) + 0em;
		// 	border-radius: 50%;
		// 	background-color: #000;
		// 	margin-inline-end: .5em;
		// }
	}

	&__list {
		display: flex;
		flex-direction: column;
		list-style: none;
		// list-style-position: inside;
		padding: 0;
		margin: 0;
		row-gap: 0.25rem;
	}

	&__marker {
		display: inline-block;
		font-size: 2em;
		vertical-align: top;
		line-height: 0;
	}

	&__decoding {
		font-weight: 300;
		font-size: math.div(14, 16) + 0em;
	}
}

.address {
	display: flex;
	flex-direction: column;
	row-gap: 0.5rem;
	font-style: normal;

	&__title {
		display: flex;
		align-items: center;
		font-size: math.div(20, 16) + 0rem;
		margin: 0;

		&-icon {
			margin-inline-end: 0.25em;
		}
	}

	&__list {
		list-style: none;
		padding: 0;
		margin: 0;
		display: flex;
		flex-direction: column;
		row-gap: 0.25rem;
	}

	&__item {
		display: flex;
		flex-wrap: wrap;
		align-items: center;

		&-icon {
			margin-inline-end: 0.25em;
		}
	}

	&__link {
		display: flex;
		flex-wrap: wrap;
		align-items: center;
	}
}

